<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityGuess</string>
    <string name="quiz">Quiz</string>
    <string name="survival">Survival</string>
    <string name="achievements">achievements</string>
    <string name="game">game</string>
    <string name="country_list">Country List</string>
    <string name="about_us">about us</string>
    <string name="ad_free">ad free</string>
    <string name="start">Start</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="fa_chevron_left"></string>
    <string name="fa_chevron_right"></string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_country_list">CountryListActivity</string>
    <string name="title_activity_game_start">GameStartActivity</string>

    <!-- AchievementReachedDialogFragment strings -->
    <string name="ok">Ok</string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hours">hours</string>
    <string name="congratulations">Congratulations!</string>

    <string-array name="achievements">
        <item>right answers achievement reached!</item>
        <item>right answers in a row achievement reached!</item>
        <item>total right answers achievement reached!</item>
        <item>spent in survival achievement reached!</item>
        <item>spent in game achievement reached!</item>
    </string-array>

    <string name="game_achievements_dialog_prefix">right answers achievement reached!</string>
    <string name="row_achievements_dialog_prefix">right answers in a row achievement reached!</string>
    <string name="total_achievements_dialog_prefix">total right answers achievement reached!</string>
    <string name="time_survival_achievements_dialog_prefix">spent in survival achievement reached!</string>
    <string name="total_time_achievements_dialog_prefix">spent in game achievement reached!</string>

    <!-- Game Activity strings -->
    <string name="completed">Completed</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="time">Time</string>

    <!-- Achievements Activity strings -->
    <string name="right_in_game">Right Answers in Game</string>
    <string name="right_in_row">Right Answers in Row</string>
    <string name="right_total">Total Right Answers</string>
    <string name="time_in_survival">Time in Survival</string>
    <string name="time_total">Total Time in Game</string>

    <!-- End Game Activity strings -->
    <string name="game_type">Game Type</string>
    <string name="game_difficulty">Game Difficulty</string>
    <string name="completed_quizzes">Completed Quizzes</string>
    <string name="right_answers">Right Answers</string>
    <string name="wrong_answers">Wrong Answers</string>

    <!-- Description strings -->
    <string name="about_us_text">FlyCode is a new initiative of highly motivated individuals who believe that everybody can change
        the world. FlyCode was founded in 2016 in Yerevan, Armenia. Besides that FlyCode is mainly a service-company, we aim to
        constantly push great products in to the world of IT, starting from small application to a sophistica\nted technological solutions.
        Service side is covered with unique approach to every project, from idea to complete product. </string>
    <string name="quiz_description">Can You answer several interesting questions in short
    period of time? It is real fun and challenge for you!</string>
    <string name="survival_description">Try to survive in a world of adventure and amazing questions about beautiful countries
        of the world</string>

    <!-- Preferences File Name, where persistent data is stored-->
    <string name="preferences_file_name">CityGuessPreferences</string>

</resources>


























