<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:orientation="vertical" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_button_white" >

                <com.flycode.customtypefacewidget.CTButton
                    android:id="@+id/quiz"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:gravity="center"
                    android:text="@string/quiz"
                    android:textSize="@dimen/quiz_survival_text_size"
                    android:textAllCaps="false"
                    app:typeface="OpenSans-Bold.ttf"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_button_green" />

                <LinearLayout
                    android:id="@+id/quiz_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="@drawable/rounded_button_grey" >

                        <TextView
                            android:id="@+id/quiz_left_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/fa_chevron_left"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/quiz_right_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/fa_chevron_right"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:gravity="center" />

                        <com.flycode.customtypefacewidget.CTTextView
                            android:id="@+id/quiz_difficulty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@id/quiz_left_arrow"
                            android:layout_toEndOf="@id/quiz_left_arrow"
                            android:layout_toLeftOf="@id/quiz_right_arrow"
                            android:layout_toStartOf="@id/quiz_right_arrow"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/easy"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_difficulty_size"
                            app:typeface="OpenSans-Italic.ttf"
                            android:gravity="center" />

                    </RelativeLayout>

                    <com.flycode.customtypefacewidget.CTTextView
                        android:id="@+id/quiz_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:text="@string/quiz_description"
                        android:textColor="@color/view_text_color"
                        android:textSize="@dimen/game_description_text_size"
                        app:typeface="OpenSans-Regular.ttf" />

                    <com.flycode.customtypefacewidget.CTButton
                        android:id="@+id/start_quiz"
                        android:layout_width="@dimen/game_start_button_width"
                        android:layout_height="@dimen/game_start_button_height"
                        android:layout_marginTop="@dimen/start_quiz_button_margin_top"
                        android:layout_marginBottom="@dimen/start_quiz_button_margin_bottom"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/start"
                        android:textSize="@dimen/menu_button_text_size"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        app:typeface="OpenSans-Light.ttf"
                        android:background="@drawable/rounded_button_green" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="@dimen/card_view_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_button_white" >

                <LinearLayout
                    android:id="@+id/survival_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <com.flycode.customtypefacewidget.CTButton
                        android:id="@+id/start_survival"
                        android:layout_width="@dimen/game_start_button_width"
                        android:layout_height="@dimen/game_start_button_height"
                        android:layout_marginTop="@dimen/start_quiz_button_margin_bottom"
                        android:layout_marginBottom="@dimen/start_quiz_button_margin_top"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/start"
                        android:textSize="@dimen/menu_button_text_size"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        app:typeface="OpenSans-Light.ttf"
                        android:background="@drawable/rounded_button_green" />

                    <com.flycode.customtypefacewidget.CTTextView
                        android:id="@+id/survival_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:text="@string/survival_description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/game_description_text_size"
                        app:typeface="OpenSans-Regular.ttf"/>

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:background="@drawable/rounded_button_grey" >

                        <TextView
                            android:id="@+id/survival_left_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/fa_chevron_left"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/survival_right_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/fa_chevron_right"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:gravity="center" />

                        <com.flycode.customtypefacewidget.CTTextView
                            android:id="@+id/survival_difficulty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@id/survival_left_arrow"
                            android:layout_toEndOf="@id/survival_left_arrow"
                            android:layout_toLeftOf="@id/survival_right_arrow"
                            android:layout_toStartOf="@id/survival_right_arrow"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/easy"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_difficulty_size"
                            app:typeface="OpenSans-Italic.ttf"
                            android:gravity="center" />

                    </RelativeLayout>

                </LinearLayout>

                <com.flycode.customtypefacewidget.CTButton
                    android:id="@+id/survival"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:gravity="center"
                    android:text="@string/survival"
                    android:textSize="@dimen/quiz_survival_text_size"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:typeface="OpenSans-Bold.ttf"
                    android:background="@drawable/rounded_button_green" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
